# dm-agent

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  QWEN.md  README.md  pyproject.toml
compendio/: README.md
config/: modelos.json  perfiles.json  proyecto.json
docs/: ANALISIS_DND5E.md  ANALISIS_HERMES.md  ARQUITECTURA.md  BACKLOG.md  DECISIONES_ABIERTAS.md  MODELOS_LOCALES.md  PLAN_FASES.md  PRUEBA_MANUAL_F2.md  PRUEBA_MANUAL_F4.md  PRUEBA_MANUAL_F5_COMBATE.md  REGLAS_ADAPTADAS.md  RIESGOS.md
docs/decisiones/: 0001-lengua-identificadores.md  0002-validacion-schemas.md  README.md  (+6 more)
scripts/: check_llm_mock.py  check_perfil.py
tests/: conftest.py  test_agent_tool_robustness.py  test_agente_memoria.py  test_agente_minimo.py  test_ataques_combate.py  test_campaña_integrada_f4.py  test_check_perfil.py  test_cierre_sesion.py  test_cli.py  test_cliente_llm.py  test_combate_integrado_f5.py  test_combate_narrativo.py  test_config.py  test_contexto_entidades.py  test_contexto_memoria.py  test_contexto_operativo.py  test_dados.py  test_entidades_narrativas.py  test_esquemas_f3.py  test_eventos.py  test_eventos_unificados.py  test_gestor_estado.py  test_iniciativa_turnos.py  test_memoria_narrativa.py  test_orden_mensajes_llm.py  test_reacciones_combate.py  test_registro.py  test_resumen_memoria.py  test_sesion_jsonl.py  test_skills_loader.py  test_smoke.py  test_tool_discipline.py  test_tool_selection.py  test_tools_combate.py  test_tools_entidades.py  test_tools_ficha.py  test_tools_hp_xp.py  test_tools_inventario.py  test_tools_narrativa.py  test_tools_resumen.py  (+1 more)
(+75 files in other folders)
